--- a/IIFYM_Main/src/main/res/layout/activity_home.xml
+++ b/IIFYM_Main/src/main/res/layout/activity_home.xml
@@ -23,10 +23,50 @@
         android:layout_marginBottom="5dp"
         app:rippleColor="?attr/colorButtonNormal" />
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="25dp"
+        android:layout_marginBottom="5dp"
+        android:orientation="horizontal"
+        android:id="@+id/linearLayout">
+
+        <ImageButton
+            android:id="@+id/imagebtn_prev"
+            android:layout_width="30dp"
+            android:layout_height="match_parent"
+            android:layout_alignBottom="@+id/lblSelectedDate"
+            android:background="#00000000"
+            app:srcCompat="@mipmap/ic_previous" />
+
+        <TextView
+            android:id="@+id/lblSelectedDate"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true"
+            android:layout_weight="1"
+            android:text="Today"
+            android:textAlignment="center"
+            android:textColor="@color/black_light"
+            android:textSize="18sp"
+            android:textStyle="bold" />
+
+        <ImageButton
+            android:id="@+id/imagebtn_next"
+            android:layout_width="30dp"
+            android:layout_height="match_parent"
+            android:layout_alignBottom="@+id/lblSelectedDate"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentTop="true"
+            android:background="#00000000"
+            app:srcCompat="@mipmap/ic_next" />
+    </LinearLayout>
+
     <android.support.v4.view.ViewPager
         android:id="@+id/viewpager"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior"  />
+        app:layout_behavior="@string/appbar_scrolling_view_behavior"
+        android:layout_below="@+id/linearLayout" />
 </RelativeLayout>
 
