--- a/IIFYM/src/main/res/layout/activity_login.xml
+++ b/IIFYM/src/main/res/layout/activity_login.xml
@@ -15,62 +15,63 @@
         android:layout_height="wrap_content">
 
         <android.support.constraint.ConstraintLayout
+            android:id="@+id/loginConstraintLayout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:descendantFocusability="beforeDescendants"
-            android:focusableInTouchMode="true" >
+            android:focusableInTouchMode="true">
 
             <EditText
+                android:id="@+id/email_edittext"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:inputType="textEmailAddress"
-                android:ems="13"
-                android:id="@+id/email_edittext"
-                android:hint="Email"
-                android:layout_marginStart="16dp"
-                app:layout_constraintLeft_toLeftOf="parent"
                 android:layout_marginEnd="16dp"
-                app:layout_constraintRight_toRightOf="parent"
-                android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionMode.Subtitle"
+                android:layout_marginStart="16dp"
+                android:ems="13"
                 android:fontFamily="sans-serif"
-                android:textColorHint="?android:attr/textColorHint"
+                android:hint="Email"
+                android:inputType="textEmailAddress"
+                android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionMode.Subtitle"
                 android:textColor="?attr/colorPrimary"
+                android:textColorHint="?android:attr/textColorHint"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
                 tools:layout_editor_absoluteY="0dp" />
 
             <EditText
+                android:id="@+id/password_textview"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:inputType="textPassword"
-                android:ems="13"
-                android:id="@+id/password_textview"
-                android:hint="Password"
-                android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionMode.Subtitle"
-                android:fontFamily="sans-serif"
-                android:textColorHint="?android:attr/textColorHint"
-                android:layout_marginEnd="16dp"
-                app:layout_constraintRight_toRightOf="parent"
-                android:layout_marginStart="16dp"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/email_edittext"
-                app:layout_constraintBottom_toBottomOf="parent"
                 android:layout_marginBottom="16dp"
-                app:layout_constraintVertical_bias="0.0"
-                android:textColor="?attr/colorPrimary" />
+                android:layout_marginEnd="16dp"
+                android:layout_marginStart="16dp"
+                android:ems="13"
+                android:fontFamily="sans-serif"
+                android:hint="Password"
+                android:inputType="textPassword"
+                android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionMode.Subtitle"
+                android:textColor="?attr/colorPrimary"
+                android:textColorHint="?android:attr/textColorHint"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/email_edittext"
+                app:layout_constraintVertical_bias="0.0" />
 
             <Button
-                android:text="@string/btnRegister"
+                android:id="@+id/Button_Register"
                 android:layout_width="95dp"
                 android:layout_height="wrap_content"
-                android:id="@+id/Button_Register"
-                android:textColor="#192D5A"
-                android:background="@drawable/btn_iifym_style"
-                app:layout_constraintTop_toBottomOf="@+id/password_textview"
-                android:layout_marginEnd="16dp"
-                app:layout_constraintRight_toRightOf="parent"
-                android:layout_marginStart="16dp"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"
                 android:layout_marginBottom="16dp"
+                android:layout_marginEnd="16dp"
+                android:layout_marginStart="16dp"
+                android:background="@drawable/btn_iifym_style"
+                android:text="@string/btnRegister"
+                android:textColor="#192D5A"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/password_textview"
                 app:layout_constraintVertical_bias="0.060000002" />
 
             <Button
@@ -80,6 +81,7 @@
                 android:layout_marginBottom="16dp"
                 android:layout_marginEnd="16dp"
                 android:layout_marginStart="16dp"
+                android:layout_marginTop="72dp"
                 android:background="@drawable/btn_iifym_style"
                 android:text="@string/btnForgotPassword"
                 android:textColor="#192D5A"
@@ -87,60 +89,59 @@
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/password_textview"
-                app:layout_constraintVertical_bias="0.060000002"
-                android:layout_marginTop="72dp" />
+                app:layout_constraintVertical_bias="0.060000002" />
 
             <TextView
-                android:text="Sign Up Using"
+                android:id="@+id/signup_textview"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/signup_textview"
-                android:textColor="@color/colorPrimary"
-                android:layout_marginTop="96dp"
                 android:layout_marginEnd="16dp"
-                app:layout_constraintRight_toRightOf="parent"
                 android:layout_marginStart="16dp"
+                android:layout_marginTop="96dp"
+                android:text="Sign Up Using"
+                android:textColor="@color/colorPrimary"
                 app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/Button_Register" />
 
             <ImageButton
-                app:srcCompat="@drawable/ic_facebook"
                 android:id="@+id/facebook_signup_button"
-                android:background="@color/Transparent"
-                android:scaleType="centerCrop"
                 android:layout_width="35dp"
                 android:layout_height="35dp"
-                android:layout_marginTop="8dp"
-                app:layout_constraintTop_toBottomOf="@+id/signup_textview"
-                android:layout_marginStart="16dp"
-                app:layout_constraintLeft_toLeftOf="parent"
                 android:layout_marginEnd="16dp"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="8dp"
+                android:background="@color/Transparent"
+                android:scaleType="centerCrop"
+                app:layout_constraintHorizontal_bias="0.43"
+                app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintHorizontal_bias="0.43" />
+                app:layout_constraintTop_toBottomOf="@+id/signup_textview"
+                app:srcCompat="@drawable/ic_facebook" />
 
             <ImageButton
+                android:id="@+id/google_signup_button"
                 android:layout_width="35dp"
                 android:layout_height="35dp"
-                app:srcCompat="@drawable/ic_google"
-                android:id="@+id/google_signup_button"
+                android:layout_marginEnd="16dp"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="8dp"
                 android:background="@color/Transparent"
                 android:scaleType="centerCrop"
-                android:layout_marginTop="8dp"
-                app:layout_constraintTop_toBottomOf="@+id/signup_textview"
-                android:layout_marginEnd="16dp"
-                app:layout_constraintRight_toRightOf="parent"
-                android:layout_marginStart="16dp"
+                app:layout_constraintHorizontal_bias="0.57"
                 app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintHorizontal_bias="0.57" />
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/signup_textview"
+                app:srcCompat="@drawable/ic_google" />
 
             <android.support.constraint.Guideline
+                android:id="@+id/guideline2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/guideline2"
-                app:layout_constraintGuide_begin="20dp"
                 android:orientation="horizontal"
-                tools:layout_editor_absoluteY="20dp"
-                tools:layout_editor_absoluteX="0dp" />
+                app:layout_constraintGuide_begin="20dp"
+                tools:layout_editor_absoluteX="0dp"
+                tools:layout_editor_absoluteY="20dp" />
 
         </android.support.constraint.ConstraintLayout>
     </ScrollView>
