--- a/IIFYM/src/main/res/layout/activity_login.xml
+++ b/IIFYM/src/main/res/layout/activity_login.xml
@@ -70,69 +70,34 @@
                 android:textColor="#192D5A"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/password_textview"
-                app:layout_constraintVertical_bias="0.060000002" />
+                app:layout_constraintVertical_bias="0.101"
+                android:layout_marginLeft="16dp"
+                android:layout_marginTop="16dp"
+                android:layout_marginRight="8dp"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintHorizontal_bias="0.158" />
 
             <Button
                 android:id="@+id/button_forgot"
-                android:layout_width="95dp"
+                android:layout_width="100dp"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="16dp"
                 android:layout_marginEnd="16dp"
+                android:layout_marginLeft="8dp"
+                android:layout_marginRight="16dp"
                 android:layout_marginStart="16dp"
-                android:layout_marginTop="72dp"
                 android:background="@drawable/btn_iifym_style"
+                android:capitalize="none"
                 android:text="@string/btnForgotPassword"
                 android:textColor="#192D5A"
                 app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintHorizontal_bias="0.517"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/password_textview"
-                app:layout_constraintVertical_bias="0.060000002" />
-
-            <TextView
-                android:id="@+id/signup_textview"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="16dp"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="96dp"
-                android:text="Sign Up Using"
-                android:textColor="@color/colorPrimary"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/Button_Register" />
-
-            <ImageButton
-                android:id="@+id/facebook_signup_button"
-                android:layout_width="35dp"
-                android:layout_height="35dp"
-                android:layout_marginEnd="16dp"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="8dp"
-                android:background="@color/Transparent"
-                android:scaleType="centerCrop"
-                app:layout_constraintHorizontal_bias="0.43"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/signup_textview"
-                app:srcCompat="@drawable/ic_facebook" />
-
-            <ImageButton
-                android:id="@+id/google_signup_button"
-                android:layout_width="35dp"
-                android:layout_height="35dp"
-                android:layout_marginEnd="16dp"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="8dp"
-                android:background="@color/Transparent"
-                android:scaleType="centerCrop"
-                app:layout_constraintHorizontal_bias="0.57"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/signup_textview"
-                app:srcCompat="@drawable/ic_google" />
+                android:layout_marginTop="16dp"
+                app:layout_constraintTop_toBottomOf="@+id/Button_Register"
+                app:layout_constraintVertical_bias="1.0" />
 
             <android.support.constraint.Guideline
                 android:id="@+id/guideline2"
@@ -142,6 +107,21 @@
                 app:layout_constraintGuide_begin="20dp"
                 tools:layout_editor_absoluteX="0dp"
                 tools:layout_editor_absoluteY="20dp" />
+
+            <com.google.android.gms.common.SignInButton
+                android:id="@+id/btnGoogleSignIn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="16dp"
+                android:layout_marginLeft="8dp"
+                android:layout_marginRight="16dp"
+                android:layout_marginTop="16dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintHorizontal_bias="0.834"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/password_textview"
+                app:layout_constraintVertical_bias="0.109" />
 
         </android.support.constraint.ConstraintLayout>
     </ScrollView>
