Finished Meal Logic Still need to test and polish

--- a/IIFYM/src/main/res/layout/activity_activtity_select_meal_ingredients.xml
+++ b/IIFYM/src/main/res/layout/activity_activtity_select_meal_ingredients.xml
@@ -62,6 +62,7 @@
             android:inputType="textCapSentences"
             tools:layout_editor_absoluteX="0dp"
             tools:layout_editor_absoluteY="0dp" />
+
     </LinearLayout>
 
     <ScrollView
@@ -73,7 +74,15 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="horizontal">
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/lblFrequent"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="3dp"
+                android:layout_marginTop="3dp"
+                android:text="@string/lblFrequent" />
 
             <ListView
                 android:id="@+id/listviewSavedItems"
