--- a/IIFYM/src/main/res/layout/meal_ingredient.xml
+++ b/IIFYM/src/main/res/layout/meal_ingredient.xml
@@ -58,7 +58,7 @@
                     android:textSize="14sp" />
 
                 <EditText
-                    android:id="@+id/etxtPortionAmount"
+                    android:id="@+id/etxtAmount"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
