--- a/IIFYM/src/main/res/layout/meal_ingredient.xml
+++ b/IIFYM/src/main/res/layout/meal_ingredient.xml
@@ -16,17 +16,16 @@
             android:orientation="vertical">
 
             <TextView
-                android:id="@+id/lblMealName"
+                android:id="@+id/lblName"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
                 android:text="Meal Name"
                 android:textAppearance="?android:attr/textAppearanceMedium"
                 android:textColor="@color/colorPrimary"
                 android:textSize="14sp" />
 
             <TextView
-                android:id="@+id/lblMealBrand"
+                android:id="@+id/lblBrand"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -47,16 +46,6 @@
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
 
-                <TextView
-                    android:id="@+id/lblPortionType"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:text="Portion Type"
-                    android:textAppearance="?android:attr/textAppearanceMedium"
-                    android:textColor="@color/colorPrimary"
-                    android:textSize="14sp" />
-
                 <EditText
                     android:id="@+id/etxtAmount"
                     android:layout_width="match_parent"
@@ -66,6 +55,16 @@
                     android:hint="Amount"
                     android:inputType="number|numberSigned|numberDecimal"
                     android:textAppearance="@android:style/TextAppearance.Material.Small" />
+
+                <TextView
+                    android:id="@+id/lblPortionType"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="Portion Type"
+                    android:textAppearance="?android:attr/textAppearanceMedium"
+                    android:textColor="@color/colorPrimary"
+                    android:textSize="14sp" />
 
             </LinearLayout>
 
