--- a/IIFYM/src/main/res/layout/activity_home.xml
+++ b/IIFYM/src/main/res/layout/activity_home.xml
@@ -38,7 +38,7 @@
             android:layout_alignBottom="@+id/lblSelectedDate"
             android:layout_margin="3dp"
             android:background="#00000000"
-            app:srcCompat="@mipmap/ic_previous" />
+            app:srcCompat="@drawable/ic_previous" />
 
         <TextView
             android:id="@+id/lblSelectedDate"
@@ -62,7 +62,7 @@
             android:layout_alignParentTop="true"
             android:layout_margin="3dp"
             android:background="#00000000"
-            app:srcCompat="@mipmap/ic_next" />
+            app:srcCompat="@drawable/ic_next" />
     </LinearLayout>
 
     <android.support.v4.view.ViewPager
