--- a/IIFYM/src/main/res/layout/activity_activtity_select_meal_ingredients.xml
+++ b/IIFYM/src/main/res/layout/activity_activtity_select_meal_ingredients.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:fab="http://schemas.android.com/apk/res-auto"
@@ -13,68 +14,66 @@
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="150dp"
-        tools:layout_editor_absoluteX="115dp"
-        tools:layout_editor_absoluteY="42dp">
+        android:layout_height="match_parent">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/lblSelectedFoods"
+            <ScrollView
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/lblSelectedFoods"
-                android:textAppearance="@android:style/TextAppearance.Material.Medium"
-                android:textColor="?attr/colorPrimary"
-                android:textStyle="bold" />
+                android:layout_height="match_parent"
+                tools:layout_editor_absoluteX="115dp"
+                tools:layout_editor_absoluteY="42dp">
 
-            <ListView
-                android:id="@+id/listviewSelectedFoods"
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:id="@+id/lblSelectedFoods"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="@string/lblSelectedFoods"
+                        android:textAppearance="@android:style/TextAppearance.Material.Medium"
+                        android:textColor="?attr/colorPrimary"
+                        android:textStyle="bold" />
+
+                    <ListView
+                        android:id="@+id/listviewSelectedFoods"
+                        android:layout_width="match_parent"
+                        android:layout_height="130dp"
+                        tools:layout_editor_absoluteX="0dp"></ListView>
+
+                </LinearLayout>
+            </ScrollView>
+
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="130dp"
-                tools:layout_editor_absoluteX="0dp"></ListView>
+                android:layout_height="match_parent"
+                android:orientation="horizontal">
 
-        </LinearLayout>
-    </ScrollView>
+                <ImageView
+                    android:id="@+id/iconSearch"
+                    android:layout_width="25dp"
+                    android:layout_height="50dp"
+                    android:scaleType="fitCenter"
+                    fab:srcCompat="@drawable/ic_search" />
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
+                <EditText
+                    android:id="@+id/etxtSearch"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="0.75"
+                    android:ems="10"
+                    android:hint="Search ..."
+                    android:inputType="textCapSentences"
+                    tools:layout_editor_absoluteX="0dp"
+                    tools:layout_editor_absoluteY="0dp" />
 
-        <ImageView
-            android:id="@+id/iconSearch"
-            android:layout_width="25dp"
-            android:layout_height="50dp"
-            android:scaleType="fitCenter"
-            fab:srcCompat="@drawable/ic_search" />
-
-        <EditText
-            android:id="@+id/etxtSearch"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="0.75"
-            android:ems="10"
-            android:hint="Search ..."
-            android:inputType="textCapSentences"
-            tools:layout_editor_absoluteX="0dp"
-            tools:layout_editor_absoluteY="0dp" />
-
-    </LinearLayout>
-
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:layout_editor_absoluteX="115dp"
-        tools:layout_editor_absoluteY="42dp">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
+            </LinearLayout>
 
             <TextView
                 android:id="@+id/lblFrequent"
@@ -82,14 +81,23 @@
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="3dp"
                 android:layout_marginTop="3dp"
+                android:layout_weight="1"
                 android:text="@string/lblFrequent" />
 
-            <ListView
-                android:id="@+id/listviewSavedItems"
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                tools:layout_editor_absoluteX="0dp"></ListView>
+                android:orientation="vertical">
+
+                <ListView
+                    android:id="@+id/listviewSavedItems"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    tools:layout_editor_absoluteX="0dp" />
+
+            </LinearLayout>
 
         </LinearLayout>
     </ScrollView>
+
 </LinearLayout>
