--- a/IIFYM/src/main/res/layout/activity_login.xml
+++ b/IIFYM/src/main/res/layout/activity_login.xml
@@ -36,7 +36,8 @@
                 android:textColorHint="?android:attr/textColorHint"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
-                tools:layout_editor_absoluteY="0dp" />
+                app:layout_constraintTop_toTopOf="parent"
+                android:layout_marginTop="8dp" />
 
             <EditText
                 android:id="@+id/password_textview"
@@ -64,19 +65,19 @@
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="16dp"
                 android:layout_marginEnd="16dp"
+                android:layout_marginLeft="16dp"
+                android:layout_marginRight="8dp"
                 android:layout_marginStart="16dp"
+                android:layout_marginTop="16dp"
                 android:background="@drawable/btn_iifym_style"
                 android:text="@string/btnRegister"
                 android:textColor="#192D5A"
                 app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintHorizontal_bias="0.158"
                 app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/password_textview"
-                app:layout_constraintVertical_bias="0.101"
-                android:layout_marginLeft="16dp"
-                android:layout_marginTop="16dp"
-                android:layout_marginRight="8dp"
                 app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintHorizontal_bias="0.158" />
+                app:layout_constraintTop_toBottomOf="@+id/password_textview"
+                app:layout_constraintVertical_bias="0.101" />
 
             <Button
                 android:id="@+id/button_forgot"
@@ -87,6 +88,7 @@
                 android:layout_marginLeft="8dp"
                 android:layout_marginRight="16dp"
                 android:layout_marginStart="16dp"
+                android:layout_marginTop="16dp"
                 android:background="@drawable/btn_iifym_style"
                 android:capitalize="none"
                 android:text="@string/btnForgotPassword"
@@ -95,7 +97,6 @@
                 app:layout_constraintHorizontal_bias="0.517"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
-                android:layout_marginTop="16dp"
                 app:layout_constraintTop_toBottomOf="@+id/Button_Register"
                 app:layout_constraintVertical_bias="1.0" />
 
