Bug Fix: Meal add up of foods inaccurate

--- a/IIFYM/src/main/res/layout/activity_activtity_select_meal_ingredients.xml
+++ b/IIFYM/src/main/res/layout/activity_activtity_select_meal_ingredients.xml
@@ -18,8 +18,8 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
+            android:layout_height="wrap_content"
+            android:orientation="vertical" >
 
             <ScrollView
                 android:layout_width="match_parent"
@@ -44,7 +44,7 @@
                     <ListView
                         android:id="@+id/listviewSelectedFoods"
                         android:layout_width="match_parent"
-                        android:layout_height="130dp"
+                        android:layout_height="160dp"
                         tools:layout_editor_absoluteX="0dp"></ListView>
 
                 </LinearLayout>
@@ -75,27 +75,36 @@
 
             </LinearLayout>
 
-            <TextView
-                android:id="@+id/lblFrequent"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="3dp"
-                android:layout_marginTop="3dp"
-                android:layout_weight="1"
-                android:text="@string/lblFrequent" />
-
-            <LinearLayout
+            <ScrollView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:orientation="vertical">
+                tools:layout_editor_absoluteX="115dp"
+                tools:layout_editor_absoluteY="42dp">
 
-                <ListView
-                    android:id="@+id/listviewSavedItems"
+                <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    tools:layout_editor_absoluteX="0dp" />
+                    android:orientation="vertical"
+                    android:weightSum="1">
 
-            </LinearLayout>
+                    <TextView
+                        android:id="@+id/lblFrequent"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="3dp"
+                        android:layout_marginTop="3dp"
+                        android:text="@string/lblFrequent" />
+
+                    <ListView
+                        android:id="@+id/listviewSavedItems"
+                        android:layout_width="match_parent"
+                        android:layout_height="256dp"
+                        android:layout_weight="4.86"
+                        android:paddingTop="5dp"
+                        tools:layout_editor_absoluteX="0dp"></ListView>
+
+                </LinearLayout>
+            </ScrollView>
 
         </LinearLayout>
     </ScrollView>
